===================================
gnome-commander 1.2.8.1
---------------

Bug fixes:
 * Fixed problem #587325 (crash in a clean chroot environment)


===================================
gnome-commander 1.2.8
---------------

Bug fixes:
 * Fixed problem #375357 (crash when cancelling calculation of dir properties)
 * Fixed problem #536446 (file name not focused for in-place renaming)
 * Fixed problem #539812 (crash when deleting files: broken it.po)
 * Fixed problem #548947 (non-UTF8 locale date problem)
 * Fixed problem #548948 (crash when home directory contains non-UTF8 characters)
 * Fixed problem #548961 (support for input method when rename or quicksearch)
 * Fixed problem #554586 (AC_PROG_CXX macro problem)
 * Fixed problem #554598 (GNOME Goal: LINGUAS)
 * Fixed problem #556664 (bookmarks can not be saved for mounted devices)
 * Fixed problem #556836 (pane scrolling when moving between panes)
 * Fixed problem #567404 (crash when INSERT pressed over subdir)
 * Fixed problem #567506 (slow startup for systems with many users)
 * Fixed problem #570727 (usage of deprecated gnome_url_show)
 * Fixed problem #571239 (replacing obsoleted GnomeColorPicker with GtkColorButton)
 * Fixed problem #571247 (replacing obsoleted GnomePixmap with GtkImage)
 * Fixed problem #571558 (replacing deprecated GNOME_STOCK_* buttons with GTK_STOCK_* counterparts)
 * Fixed problem #576174 (case insensitive file name sorting in non en_US.utf8 locale)
 * Fixed problem #579633 (accessing administrator privileges with gksudo)
 * Fixed problem #583135 (disabled 'Go to' button in search dialog)
 * Fixed problem #583711 (crash when pressing ESC in bookmark dialog)
 * Fixed problem #584727 (wrong positioning of file popup menu)
 * Fixed problem with setting equal pane size in horizontal mode
 * Fixed problem with refreshing MIME information after file renaming

New features:
 * Support for PDF metatags in advanced file rename templates